--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+.b{
+	background-color:black;
+	color:white;
+	border-radius:5px:
+}
+.b:hover{
+	background-color:yellow;
+	color:black;
+	border-radius:30px:
+	
+}
