--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 
 /* Your CSS Code here. */
-.b{
+#btn{
 	background-color:black;
 	color:white;
 	border-radius:5px:
 }
-.b:hover{
+#btn:hover{
 	background-color:yellow;
 	color:black;
 	border-radius:30px:
