--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
 
 /* Your CSS Code here. */
 #btn{
-	background-color:black;
-	color:white;
-	border-radius:5px:
+	 width: 10em;
+    height: 5ex;
+    background-color: black;
+    border: 2px solid firebrick;
+    border-radius: 5px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
 }
 #btn:hover{
 	background-color:yellow;
