--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,19 @@
 	 width: 10em;
     height: 5ex;
     background-color: black;
-    border: 2px solid firebrick;
+    border-color:firebrick;
     border-radius: 5px;
     font-weight: bold;
     color: white;
-    cursor: pointer;
+	padding:20px 40px;
+   
 }
 #btn:hover{
 	background-color:yellow;
 	color:black;
-	border-radius:30px:
+	border:30px;
+	border-style:solid;
+/* 	border-style:solid;
+	border-radius:30px: */
 	
 }
