--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 /* 	 width: 10em;
     height: 5ex; */
     background-color:black; 
-    border-color:rgb(255, 255, 255);
+/*     border-color:rgb(255, 255, 255); */
     border-radius:5px;
     font-weight: bold;
 	width:50%;
@@ -15,7 +15,7 @@
 #btn:hover{
 	background-color:yellow;
 	color:black;
-	border:30px;
+	border-radius:30px;
 	border-style:solid;
 /* 	border-style:solid;
 	border-radius:30px: */
